--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.helloworld">
 
     <application
+
+        android:name=".LoftApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,5 +24,6 @@
         </activity>
 
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
