--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
 }
 
 dependencies {
+    //google auth
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //internet
     def okHttpVersion = "4.9.0"
     def retrofitVersion = "2.9.0"
     implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofitVersion"
@@ -37,13 +41,21 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
+    //viewModel, liveData
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
+    //rxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
+    //material
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
