--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".screens.login.LoginActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".screens.main.MainActivity"/>
         <activity android:name=".AddItemActivity"/>
             
 
